tests/NormalTests/paczka2/big_fuzzy/83846555.err
Error in line 5: k2pqqV S214 140,99
Error in line 3: 8Jp A496 34,2
Error in line 9: S214 A496 66,0
Error in line 6: 8Jp S216 40,4
Error in line 16: kasheKvoy5 S214 28,6
Error in line 17: 8Jp S214 35,0
Error in line 1: k2pqqV S214 38,7
Error in line 19: S214 A496 27,2
Error in line 22: 8Jp S216 95,2
Error in line 29: 8Jp A496 57,4
Error in line 32: 8Jp S216 11,1
Error in line 34: 8Jp S214 32,0
Error in line 28: kasheKvoy5 S216 904,3
Error in line 46: 8Jp S216 59,8
Error in line 63: kasheKvoy5 S431 48,93
Error in line 62: 8Jp A496 65,6
Error in line 82: k2pqqV A496 7,5
Error in line 55: kasheKvoy5 S431 28,6
Error in line 86: 2lBsYrBRF A496 31,3
Error in line 95: fQZCniDORk S431 98,0
Error in line 103: S214 S214 -1,0
Error in line 104: k2pqqV A496 143,99
Error in line 93: 2lBsYrBRF S431 9,1
Error in line 101: k2pqqV A496 66,6
Error in line 110: kasheKvoy5 S216 83,9
Error in line 113: kasheKvoy5 S431 17,1
Error in line 114: kasheKvoy5 A496 64,0
Error in line 115: kasheKvoy5 S214 25,3
Error in line 117: k2pqqV S431 75,7
Error in line 94: S214 S214 96,4
Error in line 119: k2pqqV S214 37,0
Error in line 130: k2pqqV S216 55,7
Error in line 133: kasheKvoy5 S216 8,3
Error in line 140: 8Qt S431 84,6
Error in line 105: 8Jp S431 12,9
Error in line 160: 2lBsYrBRF S216 31,4
Error in line 159: kasheKvoy5 S431 30,8
Error in line 165: kasheKvoy5 S214 17,4
Error in line 170: kasheKvoy5 S216 98,0
Error in line 162: 8Qt A496 7,2
Error in line 176: k2pqqV S214 0,0
Error in line 184: 8Jp S214 87,5
Error in line 187: 8Jp S216 22,9
Error in line 188: 8Jp S431 66,4
Error in line 189: 8Jp S214 66,0
Error in line 202: S214 S431 -1,7
Error in line 206: fQZCniDORk A496 25,6
Error in line 199: S214 S431 4,5
Error in line 193: 2lBsYrBRF S216 94,7
Error in line 210: 2lBsYrBRF A496 46,6
Error in line 218: 8Qt S216 20,2
Error in line 237: 2lBsYrBRF S431 80,5
Error in line 248: kasheKvoy5 S214 55,7
